Removing useless php code

--- a/source/index.html
+++ b/source/index.html
@@ -11,14 +11,14 @@
 		<!-- Header section -->
 		<div id="admin">
 			<div style="margin: 0 0 0 140px">
-				<p><strong>Wamp</strong>: <?php echo $wampserverVersion; ?></p>
-				<p><strong>MySQL</strong>: <?php echo $mysqlVersion; ?></p>
-				<p><strong>Apache</strong>: <?php echo $apacheVersion; ?></p>
-				<p><strong>PHP</strong>: <?php echo $phpVersion; ?></p>
+				<p><strong>Wamp</strong>: 2.2</p>
+				<p><strong>MySQL</strong>: 5.5.24 </p>
+				<p><strong>Apache</strong>: 2.2.22 </p>
+				<p><strong>PHP</strong>: 5.3.13</p>
 			</div>
 			<div style="margin: -90px 0 0 320px">
-				<p><a href="?phpinfo">> PHP Info</a></p>
-				<p><a href="<?php echo $phpmyadminDirectory; ?>">> PhpMyAdmin</a></p>
+				<p><a href="#">> PHP Info</a></p>
+				<p><a href="#">> PhpMyAdmin</a></p>
 			</div>
 		</div>
 		<a href="#"><div id="menu">Admin</div></a>
